@@ -80,8 +80,7 @@ class CsvArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvSource> {
 		List<String> headers = useHeadersInDisplayName ? getHeaders(record) : List.of();
 
 		Preconditions.condition(!useHeadersInDisplayName || fields.size() <= headers.size(), //
-			() -> String.format( //
-				"The number of columns (%d) exceeds the number of supplied headers (%d) in CSV record: %s", //
+			() -> "The number of columns (%d) exceeds the number of supplied headers (%d) in CSV record: %s".formatted( //
 				fields.size(), headers.size(), fields)); //
 
 		@Nullable
@@ -103,6 +102,7 @@ class CsvArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvSource> {
 		return ((NamedCsvRecord) record).getHeader();
 	}
 
+	@SuppressWarnings({ "ReferenceEquality", "StringEquality" })
 	private static @Nullable String resolveNullMarker(String record) {
 		return record == CsvReaderFactory.DefaultFieldModifier.NULL_MARKER ? null : record;
 	}
